# Ashare

./: .env.example  .gitignore  README.md  pyproject.toml
docs/architecture/: system-architecture.md  telegram-bot-architecture.md
docs/plans/: 2026-04-19-mvp-implementation-plan.md  2026-04-19-telegram-integration-plan.md
docs/requirements/: product-requirements.md  telegram-bot-integration.md
docs/research/: learning-roadmap.md
scripts/: send_telegram_test_message.py
src/ashare/config/: __init__.py  settings.py
src/ashare/notifications/: __init__.py  base.py  telegram.py
tests/config/: test_settings.py
tests/notifications/: test_telegram.py
