[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare"
version = "0.1.0"
description = "A-share quantitative trading research workspace"
requires-python = ">=3.11"
authors = [
  {name = "qtang", email = "tangquan.leo@gmail.com"}
]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
